# argmin-core

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  index.html  push_docs  search-index.js  settings.html  source-files.js
argmin_core/: all.html  enum.ArgminError.html  enum.CheckpointMode.html  enum.ObserverMode.html  enum.TerminationReason.html  enum.WriteToFileSerializer.html  enum.WriterMode.html  fn.load_checkpoint.html  index.html  macro.box_clone.html  macro.check_param.html  macro.make_kv.html  macro.trait_bound.html  sidebar-items.js  struct.ArgminBase.html  struct.ArgminCheckpoint.html  struct.ArgminIterData.html  struct.ArgminIterationData.html  struct.ArgminKV.html  struct.ArgminLogger.html  struct.ArgminResult.html  struct.ArgminSlogKV.html  struct.ArgminSlogLogger.html  struct.ArgminWriter.html  struct.Error.html  struct.IterState.html  struct.MinimalNoOperator.html  struct.NoOperator.html  struct.Observer.html  struct.OpWrapper.html  struct.Surface.html  struct.Visualizer3d.html  struct.WriteToFile.html  trait.ArgminAdd.html  trait.ArgminConj.html  trait.ArgminDiv.html  trait.ArgminDot.html  trait.ArgminEye.html  trait.ArgminInv.html  trait.ArgminIter.html  (+26 more)
argmin_core/base/: struct.ArgminBase.html
argmin_core/errors/: enum.ArgminError.html
argmin_core/executor/: index.html  struct.Executor.html
argmin_core/file/: enum.WriteToFileSerializer.html  index.html  struct.WriteToFile.html
argmin_core/finitediff/: index.html  struct.PerturbationVector.html  trait.FiniteDiff.html  type.PerturbationVectors.html
argmin_core/iterstate/: struct.IterState.html
argmin_core/kv/: struct.ArgminKV.html
argmin_core/logging/: struct.ArgminLogger.html
argmin_core/logging/slog_logger/: struct.ArgminSlogLogger.html
argmin_core/macros/: index.html
argmin_core/math/: trait.ArgminAdd.html  trait.ArgminConj.html  trait.ArgminDiv.html  trait.ArgminDot.html  trait.ArgminEye.html  trait.ArgminInv.html  trait.ArgminMinMax.html  trait.ArgminMul.html  trait.ArgminNorm.html  trait.ArgminRandom.html  trait.ArgminScale.html  trait.ArgminScaledAdd.html  trait.ArgminScaledSub.html  trait.ArgminSub.html  trait.ArgminTranspose.html  trait.ArgminWeightedDot.html  trait.ArgminZero.html  trait.ArgminZeroLike.html  trait.GershgorinCircles.html  trait.GershgorinModification.html  trait.ModifiedCholesky.html
argmin_core/math/modcholesky/: index.html  struct.Decomposition.html  trait.GershgorinCircles.html  trait.ModCholeskyGMW81.html  trait.ModCholeskySE90.html  trait.ModCholeskySE99.html
argmin_core/modcholesky/: index.html  struct.Decomposition.html  trait.GershgorinCircles.html  trait.ModCholeskyGMW81.html  trait.ModCholeskySE90.html  trait.ModCholeskySE99.html
argmin_core/modcholesky/utils/: fn.swap_columns.html  (+9 more)
argmin_core/nooperator/: struct.MinimalNoOperator.html  struct.NoOperator.html
argmin_core/observers/: enum.ObserverMode.html  struct.Observer.html  trait.Observe.html
argmin_core/opwrapper/: struct.OpWrapper.html
argmin_core/output/: enum.WriterMode.html  struct.ArgminWriter.html
argmin_core/result/: struct.ArgminResult.html
argmin_core/serialization/: enum.CheckpointMode.html  fn.load_checkpoint.html  struct.ArgminCheckpoint.html
argmin_core/slog_logger/: index.html  struct.ArgminSlogKV.html  struct.ArgminSlogLogger.html
argmin_core/termination/: enum.TerminationReason.html
argmin_core/visualizer/: index.html  struct.Surface.html  struct.Visualizer3d.html
implementors/argmin_core/: trait.ArgminMul.js  trait.ArgminScaledAdd.js
implementors/failure/: trait.Fail.js
implementors/slog/: trait.KV.js
src/: base.rs  errors.rs  executor.rs  finitediff.rs  iterstate.rs  kv.rs  lib.rs  macros.rs  math.rs  nooperator.rs  opwrapper.rs  parameter.rs  problem.rs  result.rs  serialization.rs  termination.rs
src/argmin_core/: base.rs.html  errors.rs.html  executor.rs.html  iterstate.rs.html  kv.rs.html  lib.rs.html  macros.rs.html  math.rs.html  nooperator.rs.html  opwrapper.rs.html  result.rs.html  serialization.rs.html  termination.rs.html
src/logging/: mod.rs  slog_logger.rs
src/math/: add.rs  add_ndarray.rs  add_vec.rs  conj.rs  conj_ndarray.rs  conj_vec.rs  div.rs  div_ndarray.rs  div_vec.rs  dot.rs  dot_ndarray.rs  dot_vec.rs  eye_ndarray.rs  eye_vec.rs  inv_ndarray.rs  minmax.rs  minmax_vec.rs  mod.rs  mul.rs  mul_ndarray.rs  mul_vec.rs  norm.rs  norm_ndarray.rs  norm_vec.rs  random.rs  random_vec.rs  scale.rs  scaledadd.rs  scaledadd_ndarray.rs  scaledadd_vec.rs  scaledsub.rs  scaledsub_ndarray.rs  scaledsub_vec.rs  sub.rs  sub_ndarray.rs  sub_vec.rs  transpose.rs  transpose_ndarray.rs  transpose_vec.rs  weighteddot.rs  (+3 more)
src/observers/: file.rs  mod.rs  slog_logger.rs  visualizer.rs
src/output/: file.rs  mod.rs
(+87 files in other folders)
