[package]
name = "argmin_core"
version = "0.1.8"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Pure Rust optimization tools (core functionality)"
documentation = "https://argmin-rs.github.io/argmin-core/argmin_core/"
homepage = "https://github.com/argmin-rs/argmin-core"
repository = "https://github.com/argmin-rs/argmin-core"
readme = "README.md"
keywords = ["optimization", "math", "science", "HPC"]
categories = ["science"]
#license-file = "LICENSE-APACHE"
exclude = [ 
	".travis.yml",
	"push_docs",
]

[dependencies]
failure = "0.1.3"
failure_derive = "0.1.3"
ctrlc = { version = "3.1.1", optional = true }
slog = "2.4.1"
slog-term = "2.2.4"
slog-async = "2.3.0"
slog-json = "2.3.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
erased-serde = "0.3"
bincode = "1.0.1"
rand = "0.6.1"
modcholesky = "0.1.0"
finitediff = "0.1.1"
ndarray = { version = "0.12.1", optional = true, features = ["serde-1"] }
ndarray-linalg = { version = "0.10.0", optional = true }
num = { version = "0.2" }
paste = "0.1.4"

[features]
default = []
ndarrayl = ["ndarray", "ndarray-linalg", "finitediff/ndarray"]

[dev-dependencies]
# argmin_codegen = { git = "https://github.com/argmin-rs/argmin-codegen.git", branch = "master"}
# argmin_codegen = { path = "../argmin-codegen"}
# argmin_codegen = { version = "0.1.8"}
ndarray-linalg = { version = "0.10.0", features = ["openblas"] }

[badges]
travis-ci = { repository = "argmin-rs/argmin-core", branch = "master" }
