[package]
name = "argmin_core"
version = "0.2.5"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Mathematical optimization in pure Rust (core functionality)"
documentation = "https://docs.rs/argmin_core/latest/argmin_core/"
homepage = "http://argmin-rs.org"
repository = "https://github.com/argmin-rs/argmin-core"
readme = "README.md"
keywords = ["optimization", "math", "science"]
categories = ["science"]
exclude = [
	".travis.yml",
	"push_docs",
]

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
ctrlc = { version = "3.1.2", optional = true }
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
slog-json = "2.3.0"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0", optional = true }
erased-serde = { version = "0.3", optional = true }
bincode = "1.1.4"
rand = "0.7.2"
modcholesky = "0.1.2"
finitediff = "0.1.2"
ndarray = { version = "0.13", optional = true, features = ["serde-1"] }
ndarray-linalg = { version = "0.12", optional = true }
ndarray-rand = {version = "0.11.0", optional = true }
num = { version = "0.2" }
paste = "0.1.5"
gnuplot = { version = "0.0.32", optional = true}
num-complex = "0.2"

[features]
default = []
ndarrayl = ["ndarray", "ndarray-linalg", "ndarray-rand", "finitediff/ndarray"]
visualizer = ["gnuplot"]
serde1 = ["serde", "serde_json", "erased-serde"]

[dev-dependencies]
ndarray-linalg = { version = "0.12", features = ["openblas"] }

[badges]
travis-ci = { repository = "argmin-rs/argmin-core", branch = "master" }
maintenance = { status = "actively-developed" }
